--- a/telegram_part/pom.xml
+++ b/telegram_part/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.pengrad</groupId>
+            <artifactId>java-telegram-bot-api</artifactId>
+            <version>5.7.0</version>
+        </dependency>
     </dependencies>
 
 
